Fix for slideshow collapsing during transition.

--- a/stylesheets/widgets/slideshow.less
+++ b/stylesheets/widgets/slideshow.less
@@ -18,6 +18,15 @@
 .responsiveslideshow {
 
 
+    .slides-list {
+        height: 550px;
+
+        @media @mobile-650 {
+            height: 400px;
+        }
+    }
+
+
     .figure {
         .flex-display;
         .align-items(center);
